--- a/ZMS/trunk/plugins/www/bootstrap/plugin/bootstrap.plugin.zmi.css
+++ b/ZMS/trunk/plugins/www/bootstrap/plugin/bootstrap.plugin.zmi.css
@@ -1,22 +1,9 @@
 .zmi-helper-hidden {
 	display:none;
 }
-#zmi-header, #zmi-header a, #zmi-header select,
-#zmi-footer, #zmi-footer a, #zmi-footer select {
-	background-color:#777!important;
-	color:#eee!important;
-	font-size:small;
-}
-#zmi-header .pull-right {
-margin-right:0.5em;
-}
-#zmi-footer form {
-	padding:0;
-	margin:0;
-}
-#zmi-footer  form select {
-	height:1.5em;
-	padding:0;
+#zmi-footer {
+	border-top:1px solid #ccc;
+	padding:0.5em;
 }
 #zmi-banner {
 	width:460px;
@@ -59,14 +46,17 @@ ul.breadcrumb li.active a {
 	background-color: #f5f5f5 !important;
 	font-weight:bold;
 }
+ul.nav-buttons li {
+	float:left;
+	list-style-type:none;
+}
 ul.zmi-container {
 	margin:0;
 	padding:0;
 	display:block;
 }
 div#zmi-tab {
-	background-color: #f5f5f5 !important;
-
+	background-color:#f5f5f5!important;
 }
 div.alert {
 	margin:1em;
@@ -98,6 +88,10 @@ ul.zmi-container > li.zmi-item.zmi-selected > div.center a{
 }
 .zmi-container .zmi-item .right {
 	float:left;
+}
+.zmi-container .zmi-item .clearboth {
+	float:none;
+	clear:both;
 }
 ul.zmi-container > li.zmi-item > div.center .zmiRenderShort {
 	border:1px solid white;
@@ -170,6 +164,7 @@ div.accordion-heading div.pull-left {
 	background-color:#F5F5F5;
 	padding:0.5em;
 	margin:0;
+	min-width:35em;
 }
 .zmi-image del, .zmi-image del *,
 .zmi-file del, .zmi-file del * {
