--- a/ZMS/trunk/plugins/www/bootstrap/plugin/bootstrap.plugin.zmi.css
+++ b/ZMS/trunk/plugins/www/bootstrap/plugin/bootstrap.plugin.zmi.css
@@ -28,6 +28,23 @@
 #zmi-logo {
 	/*background: -moz-linear-gradient(45deg, rgb(2, 0, 49) 0%, rgb(109, 51, 83) 100%) repeat scroll 0% 0% transparent;*/
 }
+#zmi-overlay {
+	background-color:black;
+	display:block;
+	position:absolute;
+	top:0;
+	left:0;
+	width:100%;
+	height:100%;
+	filter:Alpha(opacity=40);-moz-opacity:0.40;opacity:0.40
+	}
+#zmi-progressbox {
+	padding:20px 40px 20px 40px;
+	background-color:#FFF;
+	color:black;
+	position:absolute
+}
+
 .zmi ul.main-nav {
 	margin-top:0.5em;
 	padding-left:1em;
@@ -201,6 +218,9 @@ form.form-horizontal {
 .zmi.properties .accordion-group {
 	background-color: #fff;
 	width:800px;
+}
+.perc50 {
+	width:50%!important;
 }
 .perc100 {
 	width:100%!important;
