--- a/ZMS/trunk/plugins/www/bootstrap/plugin/bootstrap.plugin.zmi.css
+++ b/ZMS/trunk/plugins/www/bootstrap/plugin/bootstrap.plugin.zmi.css
@@ -262,7 +262,12 @@ div.accordion-heading div.pull-left {
 	padding:0;
 	margin:0;
 }
-
+div.zmi-nodes textarea {
+	height:20px;
+}
+div.zmi-nodes span {
+	cursor:pointer;
+}
 .zmi-image,.zmi-file {
 	background-color:#F5F5F5;
 	padding:0.5em;
