added support for bootstrap 2.1.0 (47)

--- a/ZMS/trunk/plugins/www/bootstrap/plugin/bootstrap.plugin.zmi.css
+++ b/ZMS/trunk/plugins/www/bootstrap/plugin/bootstrap.plugin.zmi.css
@@ -247,6 +247,9 @@ form.form-horizontal {
 .perc50 {
 	width:50%!important;
 }
+.perc90 {
+	width:90%!important;
+}
 .perc100 {
 	width:100%!important;
 }
