added support for bootstrap 2.1.0 (55)

--- a/ZMS/trunk/plugins/www/bootstrap/plugin/bootstrap.plugin.zmi.css
+++ b/ZMS/trunk/plugins/www/bootstrap/plugin/bootstrap.plugin.zmi.css
@@ -440,6 +440,14 @@ body.users #zmi-tab > .pull-left,
 body.users #zmi-tab > .pull-right {
 	width:50%;
 }
+}
+body.metas table.zmi-sortable td {
+	white-space:nowrap;
+}
+body.metas table.table.zmi-sortable td img.grippy,
+body.metas table.table.zmi-sortable input {
+	margin-bottom:0px;
+}
 
 /* +-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+
  * +- [ZMI] Image
