added support for bootstrap 2.1.0 (62)

--- a/ZMS/trunk/plugins/www/bootstrap/plugin/bootstrap.plugin.zmi.css
+++ b/ZMS/trunk/plugins/www/bootstrap/plugin/bootstrap.plugin.zmi.css
@@ -13,6 +13,9 @@ body.zmi {
 .zmi-helper-hidden, .ui-helper-hidden {
 	display:none!important;
 }
+.zmi-helper-clickable, .ui-helper-clickable {
+	cursor:pointer!important;
+}
 #zmi-header {
 	background-color:black;
 	min-height:45px;
