added support for bootstrap, small screen zmi (70)

--- a/ZMS/trunk/plugins/www/bootstrap/plugin/bootstrap.plugin.zmi.css
+++ b/ZMS/trunk/plugins/www/bootstrap/plugin/bootstrap.plugin.zmi.css
@@ -566,4 +566,42 @@ margin-top: 4px;
 	.brand .slogan {
 		display:none;
 	}
+	#zmi-logo {
+		display: none;
+	}
+	.zmi ul.main-nav {
+		font-size: 13px;
+		max-height: none;
+		margin: 0px;
+		padding: 0.5em;
+	}
+	.zmi .main-nav li {
+		margin:1px;
+	}
+	.zmi .main-nav li a {
+		line-height:1.25em;
+		padding:0.5em 0.7em 0.6em 0.7em;
+		border:0px;
+	}
+	.zmi .main-nav li a:hover {
+		border-radius:4px;
+		background-color: rgb(0, 129, 194);
+		border:0px;
+		color:#fff;
+	}
+	.zmi .main-nav a:focus {
+		outline: none none;
+		outline-offset: 0px;
+	}
+	.zmi .main-nav li.active a {
+		border:0px;
+		border-radius:4px;
+		font-weight:normal;
+		background-color: #0088cc !important;
+		color:#fff;
+	}
+	.zmi .main-nav li.active a:hover {
+		background-color: #888 !important;
+		color:#fff;
+	}
 }
