CKEditor: update from 3.6.6.1 to 4.1.1 (3)

--- a/ZMS/trunk/plugins/www/bootstrap/plugin/bootstrap.plugin.zmi.css
+++ b/ZMS/trunk/plugins/www/bootstrap/plugin/bootstrap.plugin.zmi.css
@@ -212,6 +212,15 @@ ul.zmi-container > li.zmi-item.zmi-selected > div.center a{
 ul.breadcrumb li {
 	white-space:nowrap;
 }
+
+/*  Font Awesome styles: prevent resetting by CK Editor
+    ------------------------------------------------------- */
+.cke_reset_all [class^="icon-"],
+.cke_reset_all [class*=" icon-"] {
+	font-family: FontAwesome !important;
+	margin-right:3px !important;
+}
+
 .zmi-container .right li [class^="icon-"], 
 .zmi-container .right li [class*=" icon-"] {
 	width: 1.5em;
