--- a/ZMS/trunk/plugins/www/bootstrap/plugin/bootstrap.plugin.zmi.css
+++ b/ZMS/trunk/plugins/www/bootstrap/plugin/bootstrap.plugin.zmi.css
@@ -78,13 +78,18 @@ body.zmi {
 	padding:0.5em;
 	font-size:11px !important;
 }
-ul.breadcrumb {
+.zmi ul.breadcrumb {
 	clear:left;
 }
-ul.breadcrumb li.active a {
+.zmi ul.breadcrumb li {
+	white-space:nowrap;
+}
+.zmi ul.breadcrumb li.active a {
 	color:black;
 }
-
+.zmi .breadcrumb > li > .divider {
+	color: #BBBBBB;
+}
 .center h1 {
 	padding:0.2em;
 	line-height:1.4em;
@@ -114,8 +119,9 @@ ul.breadcrumb li.active a {
 .form-small {
 	font-size:smaller;
 }
-select..form-small {
+select.form-small {
 	width:auto;
+	font-size:12px;
 }
 .nav-tabs {
 	margin-bottom:0;
@@ -211,22 +217,22 @@ ul.zmi-container > li.zmi-item.zmi-selected > div.center a{
 	background-color:white!important;
 	min-height:3.5em;
 }
-ul.breadcrumb li {
-	white-space:nowrap;
-}
+
 
 /*  Font Awesome styles: prevent resetting by CK Editor
     ------------------------------------------------------- */
 .cke_reset_all [class^="icon-"],
 .cke_reset_all [class*=" icon-"] {
 	font-family: FontAwesome !important;
-	margin-right:3px !important;
+	margin-right:4px !important;
+	font-size: 14px;
 }
 
 .zmi-container .right li [class^="icon-"], 
 .zmi-container .right li [class*=" icon-"] {
+	display: inline-block;
 	width: 1.5em;
-	font-size: 17px;
+	font-size: 14px;
 }
 
 .zmi-container .right div input {
